assets/scss/main.scss
@import "./fonts.scss";
@import "./variables.scss";
@import "./utils/index.scss";

html,
body,
span,
a,
p,
h1,
h2,
h3,
h4,
h5,
h6,
li,
ul,
ol,
.nav-lin {
  font-family: "proxima_nova", sans-serif !important;
  scroll-behavior: smooth;
}
.f-bold {
  font-family: "proxima_nova_thextrabold", sans-serif !important;
}

.btn-imp-secondary {
  border-radius: 15px;
  color: #000000;
  text-transform: capitalize;
  background-color: $SECONDARY-COLOR;
}

.text-primary {
  color: $PRIMARY-COLOR !important;
}
.text-secondary {
  color: $SECONDARY-COLOR !important;
}
.f-14 {
  font-size: 14px;
}
.f-16 {
  font-size: 16px;
}
.footer {
  background-color: $PRIMARY-COLOR !important;
}

.bg-primary {
  background-color: $PRIMARY-COLOR !important;
}
.calculator-view {
  background: linear-gradient(180deg, #31761b 0%, #154805 118.75%);
  padding: 2rem 0px;
}
@media (min-width: 1200px) {
  .container {
    max-width: 1228px;
  }
}

.ht-deals {
  font-weight: 600;
  font-size: 30.4466px;
  line-height: 37px;
  color: $PRIMARY-COLOR;
  display: inline-block;
  border-left: 1px solid;
  border-right: 1px solid;
  padding: 7px 12px;
}

.sect-heading {
  font-weight: bold;
  font-size: 28px;
  line-height: 34px;
  color: $PRIMARY-COLOR;
}

.sect-link {
  font-size: 18px;
  line-height: 22px;
  color: $PRIMARY-COLOR;
}
.sect-direct {
  position: relative;
  &::after {
    content: "";
    background: linear-gradient(45deg, $PRIMARY-COLOR, transparent);
    position: absolute;
    width: 100%;
    height: 2px;
    bottom: -13px;
  }
}

.power-service {
  font-size: 28px;
  font-weight: bold;
  line-height: 34px;
  color: $PRIMARY-COLOR;
  text-transform: uppercase;
}
.complete-sol {
  background: #cbdfab;
  padding: 75px 46px;
  text-align: center;
  justify-content: center;
  align-items: center;
}
.grid-head {
  font-weight: 600;
  font-size: 20px;
  line-height: 30px;
  color: $PRIMARY-COLOR;
}
.grid-descrip {
  font-weight: 600;
  font-size: 12.3529px;
  line-height: 22px;
  text-align: center;
  color: #121113;
}
.solar-img-div {
  background: #ddeac8;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 298px;
}
.solardd {
  height: 298px;
  background-color: #e1edcf;
}
.invertersys {
  height: 277px;
  background-color: #f4f8ed;
  display: flex;
  padding: 0px 58px;
}
.shop-all {
  height: 277px;
  background-color: #cbdfab;
  a.btn {
    color: #cbdfab;
  }
}
a.text-primary:focus,
a.text-primary:hover {
  color: $PRIMARY-COLOR !important;
}
a.bg-primary:focus,
a.bg-primary:hover,
button.bg-primary:focus,
button.bg-primary:hover {
  background-color: $PRIMARY-COLOR !important;
}
.section {
  position: relative;
  padding-top: 4rem;
  padding-bottom: 4rem;
}
.media {
  display: flex;
  align-items: flex-start;
  .media-body {
    flex: 1;
  }
}

.position-sticky {
  position: sticky !important;
}
@media (min-width: 992px) {
  .navbar-expand-lg {
    flex-flow: row nowrap;
    justify-content: flex-start;
  }
  .navbar-expand-lg .navbar-collapse {
    display: flex !important;
    flex-basis: auto;
  }
  .navbar-expand-lg .navbar-nav {
    flex-direction: row;
  }
  .ml-lg-auto,
  .mx-lg-auto {
    margin-left: auto !important;
  }
  .navbar-nav .nav-item {
    margin-right: 0.5rem;
  }
  .navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 1rem;
    padding-left: 1rem;
  }
  .navbar-nav .nav-link {
    padding-top: 1rem;
    padding-bottom: 1rem;
    border-radius: 0.25rem;
  }
}
.navbar.navbar-main {
  z-index: 3;
}
.top-0 {
  top: 0;
}
.profile-page .card-profile .card-profile-image img,
.shadow {
  box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07) !important;
}
.bg-white {
  background-color: #fff !important;
}
.navbar-brand {
  font-weight: 600;
  text-transform: uppercase;
  font-size: 0.875rem;
  letter-spacing: 0.05px;
  display: inline-block;
  padding-top: 0.0625rem;
  padding-bottom: 0.0625rem;
  margin-right: 1rem;
  font-size: 1.25rem;
  line-height: inherit;
  white-space: nowrap;
}
.navbar-brand img {
  height: 30px;
}
.navbar-collapse {
  flex-basis: 100%;
  flex-grow: 1;
  align-items: center;
}

.navbar-nav .nav-link {
  font-size: 0.9rem;
  font-weight: 400;
  text-transform: normal;
  letter-spacing: 0;
  transition: all 0.15s linear;
}
.navbar-nav {
  align-items: center;
}
.bg-white .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
}

